# local-feature-refinement

./: .gitignore  LICENSE  README.md  custom_demo.py  environment.yml  types.proto
eth/: benchmark.py  benchmark_localization.py  download.sh  prepare_dataset.sh
local-feature-evaluation/: benchmark.py  compare_reconstructions.py  download.sh
multi-view-refinement/: CMakeLists.txt  cost.cc  graph.cc  graph.h  solve.cc
reconstruction-scripts/: colmap_utils.py  localization_pipeline.py  model.py  reconstruction_pipeline.py  refinement.py  triangulation_pipeline.py
two-view-refinement/: compute_match_graph.py  eval_hpatches.py  feature_matchers.py  model.py  refinement.py
utils/: create_exhaustive_matching_list.py  create_image_list_file.py  create_sequential_matching_list.py  create_starting_database.py  create_starting_database_eth.py  extract_features_all_subdirectories.py  extract_features_sift.py  extract_features_sift_all_subdirectories.py  extract_features_surf.py  ppm_to_png.py
